--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,58 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
         >
     <Spinner
-            android:id="@+id/dateSpinner"
+            android:id="@+id/callingGroupsSpinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:entries="@array/status_groups"
+            android:prompt="@string/select_status_group"
             />
-    <Spinner
-            android:id="@+id/classSpinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:entries="@array/YM_Groups"
-            android:prompt="@string/select_class_prompt"
-            />
-    <!--<DatePicker
-        android:id="@+id/weekPicker"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        />
--->
     <ListView
-            android:id="@+id/classMembersList"
+            android:id="@+id/callingsList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:orientation="horizontal"
-                  android:layout_width="fill_parent"
-                  android:layout_height="fill_parent"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_alignParentBottom="true"
             >
 
         <Button
-                android:id="@+id/saveAttendanceBtn"
+                android:id="@+id/addNewCallingBtn"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="@string/save_btn_label"
-                android:onClick="saveAttendance"
+                android:text="@string/add_btn_label"
+                android:onClick="addNewCalling"
                 />
         <Button
-                android:id="@+id/clearBtn"
+                android:id="@+id/removeCallingBtn"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="@string/clear_btn_label"
-                android:onClick="clearAttendance"
-                />
-        <Button
-                android:id="@+id/updateRosterBtn"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/update_roster_btn_label"
-                android:onClick="updateRoster"
+                android:text="@string/remove_btn_label"
+                android:onClick="removeCalling"
                 />
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
