--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,19 +1,7 @@
 <resources>
-    <string-array name="aux_arrays">
-        <item>High Priests</item>
-        <item>Elders</item>
-        <item>Relief Society</item>
-        <item>YM</item>
-        <item>YW</item>
-    </string-array>
-    <string-array name="YM_Groups">
-        <item>Priests</item>
-        <item>Teachers</item>
-        <item>Deacons</item>
-    </string-array>
-    <string-array name="YW_Groups">
-        <item>Laurels</item>
-        <item>Mia Maids</item>
-        <item>Beehives</item>
+    <string-array name="status_groups">
+        <item>All Pending</item>
+        <item>All Completed</item>
+        <item>My Pending</item>
     </string-array>
 </resources>
