Working on calling sync Tied in preference items to do data updates on click

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -2,12 +2,12 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <Preference
-        android:key="@+id/pref_sync_callings_now"
+        android:key="pref_sync_callings_now"
         android:title="@string/pref_sync_callings_now_title"
         android:summary="@string/pref_sync_callings_now_summary">
     </Preference>
  <Preference
-        android:key="@+id/pref_sync_all_now"
+        android:key="pref_sync_all_now"
         android:title="@string/pref_sync_all_now_title"
         android:summary="@string/pref_sync_all_now_summary">
     </Preference>
