Calling Detail fragment UI improvement.

--- a/res/layout/autocomplete_textview.xml
+++ b/res/layout/autocomplete_textview.xml
@@ -3,6 +3,10 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
+              android:textAppearance="?android:attr/textAppearanceLarge"
+              android:paddingLeft="6dip"
+              android:minHeight="?android:attr/listPreferredItemHeight"
+              android:gravity="center_vertical"
               android:textColor="#000000">
 
 </TextView>
