--- a/res/layout/callingdetail_fragment.xml
+++ b/res/layout/callingdetail_fragment.xml
@@ -17,18 +17,15 @@
                 android:text="@string/cancel_btn_label"
                 android:onClick="cancelChanges" />
     </LinearLayout>
-    <LinearLayout android:layout_width="fill_parent"
-                  android:layout_height="wrap_content">
-        <AutoCompleteTextView android:id="@+id/callingPosition"
+    <AutoCompleteTextView android:id="@+id/callingPosition"
+              android:layout_height="wrap_content"
+              android:layout_width="fill_parent"
+              android:hint="@string/calling_label" />
+    <AutoCompleteTextView android:id="@+id/memberName"
                   android:layout_height="wrap_content"
                   android:layout_width="fill_parent"
-                  android:hint="@string/calling_label" />
-    </LinearLayout>
-    <LinearLayout android:layout_width="fill_parent"
-                  android:layout_height="wrap_content">
-        <AutoCompleteTextView android:id="@+id/memberName"
-                      android:layout_height="wrap_content"
-                      android:layout_width="fill_parent"
-                      android:hint="@string/name_label" />
-    </LinearLayout>
+                  android:hint="@string/name_label" />
+    <Spinner android:id="@+id/status_spinner"
+             android:layout_width="fill_parent"
+             android:layout_height="wrap_content" />
 </LinearLayout>
