--- a/res/layout/callingworkflow_list.xml
+++ b/res/layout/callingworkflow_list.xml
@@ -3,22 +3,18 @@
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:orientation="vertical"
-                  android:id="@+id/workflow_listview_layout" >
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                        android:orientation="horizontal"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content" >
-            <Button android:id="@+id/addNewCallingBtn"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:text="@string/add_btn_label"/>
-            <Button android:id="@+id/removeCallingBtn"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:text="@string/remove_btn_label"
-                    android:onClick="removeCalling" />
-    </LinearLayout>
-    <ListView android:id="@android:id/list"
+                  android:id="@+id/workflow_listview_layout">
+
+    <TextView android:id="@+id/calling_name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />
+    <TextView android:id="@+id/member_name_and_status"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content" />
+
+    <ListView android:id="@android:id/list"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginTop="50dp" />
+
 </LinearLayout>
