--- a/res/layout/callingworkflow_list.xml
+++ b/res/layout/callingworkflow_list.xml
@@ -16,5 +16,9 @@
     <ListView android:id="@android:id/list"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:layout_marginTop="2dp" />
+              android:layout_marginTop="2dp"
+              android:layout_marginBottom="0dp"
+              android:fastScrollEnabled="true" />
+
 </LinearLayout>
+
