This checkin will break the code for a time.  the changes will be reverted shortly.

--- a/res/layout/callingworkflow_list.xml
+++ b/res/layout/callingworkflow_list.xml
@@ -5,17 +5,33 @@
                   android:orientation="vertical"
                   android:id="@+id/workflow_listview_layout">
 
+    <Button android:id="@+id/addNewCallingBtn"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/add_btn_label" />
+
+    <Button android:id="@+id/removeCallingBtn"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/remove_btn_label"
+            android:onClick="removeCalling" />
+
     <TextView android:id="@+id/calling_name"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content" />
+              android:layout_height="wrap_content"
+              android:textSize="7pt" />
 
     <TextView android:id="@+id/member_name_and_status"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content" />
+              android:layout_height="wrap_content"
+              android:textSize="5pt"
+              android:layout_marginTop="0dp"
+              android:layout_marginBottom="0dp"
+              android:singleLine="true" />
 
     <ListView android:id="@android:id/list"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
               android:layout_marginTop="2dp"
               android:layout_marginBottom="0dp"
               android:fastScrollEnabled="true" />
