--- a/res/layout/callingworkflow_list.xml
+++ b/res/layout/callingworkflow_list.xml
@@ -17,7 +17,8 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:fastScrollEnabled="true"
-              android:dividerHeight="2dp" />
+              android:divider="@drawable/list_separator_gradient"
+              android:dividerHeight="1dp" />
 
 </LinearLayout>
 
