--- a/res/menu/calling_list_menu.xml
+++ b/res/menu/calling_list_menu.xml
@@ -2,6 +2,12 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/menu_item_filter"
+        android:title="@string/filter_label"
+        android:showAsAction="always"
+        android:orderInCategory="0"
+        />
+    <item
         android:id="@+id/menu_item_calling_search"
         android:title="@string/search_label"
         android:icon="@drawable/action_search"
