--- a/res/layout/member_name_status.xml
+++ b/res/layout/member_name_status.xml
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:orientation="vertical">
 
-    <TextView android:id="@+id/calling_name"
+    <CheckBox android:id="@+id/calling_checkbox"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:textSize="7pt"
-              android:textStyle="bold"
-              android:textColor="#ffffff" />
+              android:focusable="false"
+              android:layout_marginRight="6sp"
+              android:layout_alignParentRight="true" />
 
-    <TextView android:id="@+id/member_name_and_status"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:textSize="6pt"
-              android:textColor="#ffffff"
-              android:layout_marginLeft="5dp"
-              android:layout_marginBottom="5dp"/>
+        <TextView android:id="@+id/calling_name"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:textSize="7pt"
+                  android:textStyle="bold"
+                  android:textColor="#ffffff" />
 
-</LinearLayout>
+        <TextView android:id="@+id/member_name_and_status"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:textSize="6pt"
+                  android:textColor="#ffffff"
+                  android:layout_marginLeft="5dp"
+                  android:layout_marginBottom="5dp"
+                  android:layout_below="@+id/calling_name" />
+</RelativeLayout>
